--- a/starter-template/css/style.css
+++ b/starter-template/css/style.css
@@ -12,9 +12,16 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }
+.border-bottom{
+	border-bottom: solid 0.9px 5px #00838f;
+}
 
+/* shadows */
 .shadow-box{
-	box-shadow: box-shadow: 5px 5px 5px #888888 !important;
+	box-shadow:0px 1px 9px #888888;
+}
+.shadow-box-bottom{
+	box-shadow:0px 1px 1px #888888;
 }
 
 /* Extending palette */
@@ -31,4 +38,7 @@
 /*Text*/
 .justify{
 	text-align: justify;
+}
+.text-shadow{
+	text-shadow: 1px 0.5px #757575;
 }
