--- a/starter-template/css/style.css
+++ b/starter-template/css/style.css
@@ -16,7 +16,7 @@
 	border-bottom: solid 0.9px 5px #00838f;
 }
 .contact-square{
-	background-color: #e0f2f1;
+	background-color: #f5f5f5;
 	border: 1px solid black;
 	border-radius: 8px;
 	margin-bottom: 2em; 
@@ -28,7 +28,7 @@
 
 }
 .contact-square:hover{
-	background-color:#b2dfdb !important;
+	background-color:#eeeeee !important;
 	transition: 2s ease;
 	-webkit-transition: 2s ease;
 }
