--- a/starter-template/css/style.css
+++ b/starter-template/css/style.css
@@ -15,9 +15,14 @@
 .border-bottom{
 	border-bottom: solid 0.9px 5px #00838f;
 }
+.card-image{
+	height: 18em;
+	margin-top: 3em;
+	width: 13em;
+}
 .contact-square{
 	background-color: #f5f5f5;
-	border: 1px solid black;
+	border: 1px solid #e0e0e0;
 	border-radius: 8px;
 	margin-bottom: 2em; 
 	padding-left: 2em;
